src/objects/APTS_Stage_Data_Validation_Rules_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APTS_Product_Line_Tree_BUs__c</fullName>
        <defaultValue>&quot;LPBS;LPCP;LPCW;LPED;LPLS;LPSU;LPWA;EPBP;EPBS;EPCP;EPCW;EPLS;EPMV;EPSU&quot;</defaultValue>
        <inlineHelpText>Semicolon delimited list of approved BU Codes.</inlineHelpText>
        <label>APTS Product Line Tree BUs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ApprovalMatrix_Reconciliation__c</fullName>
        <label>ApprovalMatrix Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ApprovalMatrix_Validation__c</fullName>
        <label>ApprovalMatrix Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GlobalProduct_Reconciliation__c</fullName>
        <label>GlobalProduct Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GlobalProduct_Validation__c</fullName>
        <label>GlobalProduct Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalHierachy_Reconciliation__c</fullName>
        <label>LocalHierachy Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalHierachy_Validation__c</fullName>
        <label>LocalHierachy Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalOperationalData_Reconciliation__c</fullName>
        <label>LocalOperationalData Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalOperationalData_Validation__c</fullName>
        <label>LocalOperationalData Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalProduct_Reconciliation__c</fullName>
        <label>LocalProduct Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalProduct_Validation__c</fullName>
        <label>LocalProduct Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPAApproval_Reconciliation__c</fullName>
        <label>MSPAApproval Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPAApproval_Validation__c</fullName>
        <label>MSPAApproval Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_LineItems_Reconciliation__c</fullName>
        <label>MSPA LineItems Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_LineItems_Validation__c</fullName>
        <label>MSPA LineItems Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Reconciliation__c</fullName>
        <label>MSPA Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Validation__c</fullName>
        <label>MSPA Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MasterPickList_Reconciliation__c</fullName>
        <label>MasterPickList Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MasterPickList_Validation__c</fullName>
        <label>MasterPickList Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ProductLineTree_Reconciliation__c</fullName>
        <label>ProductLineTree Reconciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ProductLineTree_Validation__c</fullName>
        <label>ProductLineTree Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Sequence__c</fullName>
        <description>Determines the sequence of Category</description>
        <inlineHelpText>Values should be Semicolon Seperated</inlineHelpText>
        <label>Category Sequence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Create_Audit_Fields__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Custom setting to determine whether to populate the audit fields.</description>
        <label>create Audit Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_SProductLineTree_BUName__c</fullName>
        <description>Contains values seperated by comma to validate values in BU name field of Staging Product Line Tree Object</description>
        <label>APTS SProduct Line Tree BUName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Validate_SFDC_User__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to check if Assigned Approver and Actual Approver fields required validation against SFDC User Object</description>
        <label>Validate SFDC User</label>
        <type>Checkbox</type>
    </fields>
	<label>APTS Stage Data Validation Rules</label>
</CustomObject>